Make Card component display characters dynamically, add propTypes to Card component

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "document": true
   },
   "rules": {
+    "camelcase": 1,
     "react/state-in-constructor": 0,
     "react/jsx-filename-extension": [
       1,
