--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   },
   "rules": {
     "camelcase": 1,
+    "no-unused-expressions": 1,
     "react/no-unused-state": 1,
     "react/state-in-constructor": 0,
     "react/jsx-filename-extension": [
