--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": ["airbnb", "prettier", "prettier/react"],
   "parser": "babel-eslint",
   "globals": {
-    "document": true
+    "document": true,
+    "window": true
   },
   "rules": {
     "camelcase": 1,
