--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
+    "swr": "^0.3.5",
     "uuid": "^3.3.3"
   },
   "scripts": {
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.9.49",
     "babel-eslint": "^10.0.3",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
